fix(sidebar): Fix nested config list rows spacing

--- a/theme/parts/sidebar.css
+++ b/theme/parts/sidebar.css
@@ -127,6 +127,7 @@ link[href="chrome://global/content/elements/moz-input-common.css"] {
 	}
 
 	& ~ .nested {
+		gap: 0 !important;
 		margin: 0 !important;
 	}
 }
